# SC_TSL_15092024_plate_detect

./: .gitattributes  .gitignore.txt  README.md  pyproject.toml  requirements.txt
analyses/: 0001_dataset_creation.md  0001_dataset_creation.qmd  0002_functional_Faster_R-CNN.md  0002_functional_Faster_R-CNN.qmd  0002_functional_Faster_R-CNN.quarto_ipynb  0003_positive_control.md  0003_positive_control.qmd  0003_positive_control.quarto_ipynb  0004_negative_control.md  0004_negative_control.qmd  0005_no_double_normalisation.md  0005_no_double_normalisation.qmd
analyses/0001_dataset_creation/: 00_GoHREP.md  00_GoHREP.qmd  01_image_collection.md  01_image_collection.qmd  02_cropping_and_downsizing.md  02_cropping_and_downsizing.qmd  02_xml_to_csv.md  02_xml_to_csv.qmd  03_cropping_and_downsizing.md  03_cropping_and_downsizing.qmd  delete_unlabelled.sh  downsize.md  labelImg_code_modifications.md
analyses/0001_resnet_faster_RCNN_training/: Plate_Image_Dataset.qmd
analyses/0002_ResNet_faster_RCNN_training/: 00_GoHREP.md  00_GoHREP.qmd  01_Plate_Image_Dataset.md  01_Plate_Image_Dataset.qmd  02_helper_training_functions.md  02_helper_training_functions.qmd  03_ResNet50_setup.md  03_ResNet50_setup.qmd  (+3 more)
checkpoints/: checkpoint_epoch_0.pth
lib/: ResNet101.py  ResNet50.py  coco_utils.py  engine.py  labels.csv  sync_batch_norm.py
scripts/: negatives_training.py  train_positives_with_helpers.py
src/: Negatives_Image_Dataset.py  Negatives_Image_Dataset_copy.py  Plate_Image_Dataset.py  ResNet50.py  helper_training_functions.py
tests/: Plate_Image_Dataset_test.py
(+547 files in other folders)
